--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "6.0.2",
+    "handlebars": "^4.7.7",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
